@@ -30,6 +30,7 @@
 -- stacked operators in "-X" file test
 -- remove "." from @INC
 -- decode source code "magic number" for UTF-8, UTF-16LE, UTF-16BE
+-- "hexfloat" literals
 
 - Java:
 -- "require", "require VERSION"
